# strata

./: .dockerignore  .editorconfig  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  Makefile  PRODUCT-SPEC.md  README.md  ROADMAP.md  SECURITY.md  cliff.toml  deny.toml  docker-compose.yml  ecphoria.toml  grounddb-product-spec.jsx  render.yaml  strata.toml
.cargo/: config.toml
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/src/: lib.rs
bindings/python/tests/: test_smoke.py
crates/ecphoria-cli/: CLAUDE.md  Cargo.toml
crates/ecphoria-cli/src/: client.rs  main.rs
crates/ecphoria-cli/src/commands/: admin.rs  backup.rs  doctor.rs  export.rs  import.rs  ingest.rs  mod.rs  query.rs  restore.rs  schema.rs  search.rs  shell.rs  status.rs
crates/ecphoria-cluster/: CLAUDE.md  Cargo.toml
crates/ecphoria-cluster/proto/: raft.proto
crates/ecphoria-cluster/src/: config.rs  coordinator.rs  error.rs  lib.rs  shard.rs
crates/ecphoria-cluster/src/raft/: mod.rs  network.rs  server.rs  store.rs  tls.rs  types.rs
crates/ecphoria-cluster/src/replication/: snapshot.rs
crates/ecphoria-cluster/tests/: grpc_transport.rs  multi_node.rs  sharding.rs
crates/ecphoria-core/: CLAUDE.md  Cargo.toml
crates/ecphoria-core/benches/: engine.rs
crates/ecphoria-core/examples/: locomo_convert.rs  locomo_eval.rs
crates/ecphoria-core/src/: authz.rs  engine.rs  lib.rs  materialized.rs
crates/ecphoria-core/src/embedding/: image_basic.rs  local.rs  mod.rs  ollama.rs  openai.rs  provider.rs
crates/ecphoria-core/src/engine/: mod.rs  tests.rs
crates/ecphoria-core/src/ingest/: webhook.rs
crates/ecphoria-core/src/llm/: anthropic.rs  claude_cli.rs  mod.rs  provider.rs
crates/ecphoria-core/src/memory/: cognition.rs  episodic.rs  graph_analytics.rs  migrations.rs  mod.rs  semantic.rs  state.rs
crates/ecphoria-core/src/query/: executor.rs  functions.rs  mod.rs  planner.rs
crates/ecphoria-core/src/rerank/: cross_encoder.rs  llm.rs  mod.rs  provider.rs
crates/ecphoria-core/src/runtime/: replicate.rs  tools.rs
crates/ecphoria-core/src/storage/: local.rs  mod.rs  s3.rs  tiering.rs
crates/ecphoria-gateway/: CLAUDE.md  Cargo.toml  build.rs
crates/ecphoria-gateway/proto/: ecphoria.proto
crates/ecphoria-gateway/src/: cdc.rs  error.rs  lib.rs  server.rs
crates/ecphoria-gateway/src/auth/: api_key.rs  audit.rs  jwt.rs  middleware.rs  oidc.rs
crates/ecphoria-gateway/src/cluster/: leader_forward.rs  mod.rs  raft_routes.rs  shard_route.rs
crates/ecphoria-gateway/src/grpc/: mod.rs  service.rs
crates/ecphoria-gateway/src/llm_proxy/: cache.rs  providers.rs  router.rs
crates/ecphoria-gateway/src/mcp/: mod.rs  prompts.rs  resources.rs  tools.rs  transport.rs
crates/ecphoria-gateway/src/pg_wire/: handler.rs
crates/ecphoria-gateway/src/rest/: admin_ui.html  handlers.rs  models.rs  routes.rs  tool_gateway.rs
crates/strata-cli/: CLAUDE.md  Cargo.toml
crates/strata-cli/src/: client.rs  main.rs  output.rs
crates/strata-cli/src/commands/: admin.rs  backup.rs  export.rs  import.rs  ingest.rs  mod.rs  query.rs  restore.rs  schema.rs  search.rs  shell.rs  status.rs
crates/strata-cluster/: CLAUDE.md  Cargo.toml  build.rs
crates/strata-cluster/data/: episodic.duckdb  state.db
crates/strata-cluster/proto/: raft.proto
crates/strata-cluster/src/: config.rs  coordinator.rs  error.rs  lib.rs  shard.rs
crates/strata-cluster/src/raft/: mod.rs  network.rs  server.rs  store.rs  types.rs
crates/strata-cluster/src/replication/: log_shipper.rs  mod.rs  snapshot.rs
crates/strata-cluster/tests/: grpc_transport.rs  multi_node.rs  sharding.rs
crates/strata-core/: CLAUDE.md  Cargo.toml
crates/strata-core/benches/: engine.rs
crates/strata-core/data/: episodic.duckdb  state.db
crates/strata-core/examples/: locomo_convert.rs  locomo_eval.rs
crates/strata-core/src/: config.rs  engine.rs  error.rs  lib.rs  materialized.rs
crates/strata-core/src/embedding/: mod.rs  ollama.rs  openai.rs  provider.rs
crates/strata-core/src/ingest/: mod.rs  pipeline.rs  webhook.rs
crates/strata-core/src/llm/: mod.rs  ollama.rs  openai.rs  provider.rs
crates/strata-core/src/memory/: cognition.rs  episodic.rs  mod.rs  semantic.rs  state.rs
crates/strata-core/src/query/: executor.rs  functions.rs  planner.rs
crates/strata-core/src/rerank/: cross_encoder.rs  mod.rs
crates/strata-core/src/runtime/: mod.rs  replicate.rs  store.rs
crates/strata-core/src/storage/: local.rs  s3.rs  tiering.rs
crates/strata-gateway/: CLAUDE.md  Cargo.toml  build.rs
crates/strata-gateway/data/: episodic.duckdb
crates/strata-gateway/proto/: strata.proto
crates/strata-gateway/src/: cdc.rs  error.rs  lib.rs  server.rs
crates/strata-gateway/src/auth/: api_key.rs  audit.rs  jwt.rs  middleware.rs  mod.rs  oidc.rs
crates/strata-gateway/src/cluster/: raft_routes.rs  shard_route.rs
crates/strata-gateway/src/grpc/: convert.rs  mod.rs  service.rs
crates/strata-gateway/src/llm_proxy/: cache.rs  mod.rs  router.rs
crates/strata-gateway/src/mcp/: resources.rs  tools.rs  transport.rs
crates/strata-gateway/src/pg_wire/: codec.rs  handler.rs
crates/strata-gateway/src/rest/: admin_ui.html  handlers.rs  mod.rs  models.rs  routes.rs  tool_gateway.rs
ecphoria-server/: CLAUDE.md  Cargo.toml
ecphoria-server/src/: banner.rs  config.rs  main.rs  telemetry.rs
ops/operator/: Cargo.toml  Dockerfile  README.md
ops/operator/deploy/: crd.yaml  operator.yaml  rbac.yaml
ops/operator/src/: main.rs
sdk/python/: pyproject.toml
sdk/python/ecphoria/: __init__.py  client.py  tools.py
sdk/python/langchain_ecphoria/: __init__.py  retriever.py  vector_store.py
sdk/python/llama_index_ecphoria/: __init__.py  vector_store.py
sdk/python/strata/: client.py
sdk/python/tests/: test_client.py
strata-server/: CLAUDE.md  Cargo.toml
strata-server/src/: banner.rs  config.rs  main.rs  signals.rs  telemetry.rs
tests/integration/: Cargo.toml
tests/integration/data/: episodic.duckdb  state.db
tests/integration/tests/: api.rs  config.rs  engine_api.rs  lib.rs  lifecycle.rs  tenant_isolation.rs
(+108 files in other folders)
