[package]
name = "ecphoria-cli"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "CLI administration tool for Ecphoria"

[[bin]]
name = "ecphoria"
path = "src/main.rs"

[dependencies]
ecphoria-core.workspace = true

tokio.workspace = true
notify.workspace = true
clap.workspace = true
reqwest.workspace = true

serde.workspace = true
serde_json.workspace = true
toml.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

anyhow.workspace = true
uuid.workspace = true
chrono.workspace = true
rustyline.workspace = true
