[package]
name = "ecphoria-cluster"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Distributed clustering for the Ecphoria context lake"

[dependencies]
ecphoria-core.workspace = true

tokio.workspace = true
futures.workspace = true
async-trait.workspace = true

openraft.workspace = true

# gRPC transport for inter-node Raft RPCs (HTTP/2 + binary).
tonic.workspace = true
prost.workspace = true
# TLS crypto provider for the Raft transport (installed once before tonic TLS use).
rustls = { version = "0.23", default-features = false, features = ["ring"] }

serde.workspace = true
serde_json.workspace = true
rmp-serde.workspace = true

thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
metrics.workspace = true

uuid.workspace = true
chrono.workspace = true
bytes.workspace = true
parking_lot.workspace = true
rusqlite.workspace = true

[build-dependencies]
tonic-build.workspace = true
protobuf-src.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
toml.workspace = true
tempfile.workspace = true
rcgen = "0.13"
