[package]
name = "ecphoria-core"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Core engine for the Ecphoria context lake"

[features]
# Local ONNX cross-encoder reranker (bge-reranker via fastembed/ort). Off by default — pulls a heavy
# native onnxruntime dependency and downloads model weights on first use.
rerank-local = ["dep:fastembed"]
# In-process ONNX text embeddings (fastembed). Off by default (same heavy native onnxruntime dep +
# model download). Enable to honor the single-binary promise without an Ollama/OpenAI sidecar:
# `--features embed-local` + `embedding.provider = "local"`.
embed-local = ["dep:fastembed"]

[dependencies]
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true

# Optional: local cross-encoder reranker backend (feature `rerank-local`).
# rustls (not the default native-tls) for hf-hub's model download, so `rerank-local` builds without
# system OpenSSL/pkg-config — consistent with the rest of the workspace (reqwest is rustls-only).
fastembed = { version = "4", optional = true, default-features = false, features = [
    "ort-download-binaries",
    "hf-hub-rustls-tls",
] }

duckdb.workspace = true
rusqlite.workspace = true
usearch.workspace = true

aws-sdk-s3.workspace = true
aws-config.workspace = true

reqwest.workspace = true

serde.workspace = true
serde_json.workspace = true
sqlparser.workspace = true
sha2.workspace = true

thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
metrics.workspace = true

uuid.workspace = true
chrono.workspace = true
bytes.workspace = true
parking_lot.workspace = true
dashmap.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
toml.workspace = true
tempfile.workspace = true
criterion.workspace = true
proptest.workspace = true

[[bench]]
name = "engine"
harness = false
