[package]
name = "ecphoria-gateway"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Protocol gateway for the Ecphoria context lake"

[dependencies]
ecphoria-core.workspace = true
ecphoria-cluster.workspace = true
openraft.workspace = true

tokio.workspace = true
futures.workspace = true
async-trait.workspace = true

axum.workspace = true
axum-extra.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true
reqwest.workspace = true

tonic.workspace = true
prost.workspace = true
prost-types.workspace = true

pgwire.workspace = true
tokio-rustls.workspace = true
rustls-pemfile.workspace = true

jsonwebtoken.workspace = true
hmac.workspace = true
sha2.workspace = true
duckdb.workspace = true
parking_lot.workspace = true

serde.workspace = true
serde_json.workspace = true

thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true

metrics.workspace = true
metrics-exporter-prometheus.workspace = true

uuid.workspace = true
chrono.workspace = true
bytes.workspace = true
dashmap.workspace = true
usearch.workspace = true

[build-dependencies]
tonic-build.workspace = true
protobuf-src.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
toml.workspace = true
tower = { workspace = true, features = ["util"] }
tokio-postgres = "0.7"
tempfile.workspace = true
