[package]
name = "strata-cluster"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Distributed clustering for the Strata context lake"

[dependencies]
strata-core.workspace = true

tokio.workspace = true
futures.workspace = true
async-trait.workspace = true

openraft.workspace = true

serde.workspace = true
serde_json.workspace = true
rmp-serde.workspace = true

reqwest.workspace = true

thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true

uuid.workspace = true
chrono.workspace = true
bytes.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
toml.workspace = true
