[package]
name = "strata-core"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Core engine for the Strata context lake"

[dependencies]
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true

duckdb.workspace = true
rusqlite.workspace = true
usearch.workspace = true

aws-sdk-s3.workspace = true
aws-config.workspace = true

serde.workspace = true
serde_json.workspace = true

thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
metrics.workspace = true

uuid.workspace = true
chrono.workspace = true
bytes.workspace = true
parking_lot.workspace = true
dashmap.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
toml.workspace = true
