[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ecphoria-client"
version = "0.3.0"
description = "Python client for the Ecphoria context lake"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.25",
    "websockets>=12.0",
]
keywords = ["ai", "agents", "context-lake", "memory", "vector-search"]

[project.urls]
Homepage = "https://github.com/VargaFoundation/ecphoria"
Documentation = "https://github.com/VargaFoundation/ecphoria/tree/main/sdk/python"

[project.optional-dependencies]
dev = ["pytest"]
langchain = ["langchain-core>=0.1"]
llama-index = ["llama-index-core>=0.10"]

[tool.pytest.ini_options]
# Make `import ecphoria` work in-repo without an editable install.
pythonpath = ["."]
testpaths = ["tests"]
