[package]
name = "strata-integration-tests"
edition.workspace = true
version.workspace = true
license.workspace = true
publish = false

# This crate has no library or binary — only integration tests.
[lib]
name = "strata_integration_tests"
path = "tests/lib.rs"

[dev-dependencies]
strata-core.workspace = true
strata-gateway.workspace = true
strata-cluster.workspace = true

tokio.workspace = true
axum.workspace = true
tower = { workspace = true, features = ["util"] }
serde_json.workspace = true
toml.workspace = true
