[package]
name = "strata-integration-tests"
edition.workspace = true
version.workspace = true
license.workspace = true
publish = false

# Empty lib to satisfy Cargo; all tests are in tests/*.rs
[lib]
name = "strata_integration_tests"
path = "src/lib.rs"

[dev-dependencies]
strata-core.workspace = true
strata-gateway.workspace = true
strata-cluster.workspace = true

tokio.workspace = true
axum.workspace = true
tower = { workspace = true, features = ["util"] }
serde_json.workspace = true
toml.workspace = true
jsonwebtoken = "9"
